--- a/app/Product/components/ModelSelector.module.scss
+++ b/app/Product/components/ModelSelector.module.scss
@@ -1,4 +1,5 @@
 .cite{
     font-size: 2.4rem;
     font-style: normal;
+    text-wrap: wrap;
 }
