--- a/app/components/Card.module.scss
+++ b/app/components/Card.module.scss
@@ -31,7 +31,7 @@
 
         padding: 0.4rem 1.8rem;
         background-color: var(--color-blue-tone);
-        color: var(--color-white);
+        color: var(--color-base);
         font-family: var(--font-zenkaku-gothic-regular);
     
         display: flex;
